--- a/package.json
+++ b/package.json
@@ -5,39 +5,59 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:prod": "NODE_ENV=production next build",
+    "build:prod": "powershell -Command \"$env:NODE_ENV='production'; next build\"",
     "start": "next start",
-    "start:prod": "NODE_ENV=production next start",
+    "start:prod": "powershell -Command \"$env:NODE_ENV='production'; next start\"",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "clean": "rm -rf .next node_modules/.cache",
-    "clean:all": "rm -rf .next node_modules package-lock.json && npm install"
+    "clean": "powershell -Command \"if (Test-Path '.next') { Remove-Item -Path '.next' -Recurse -Force }; if (Test-Path 'node_modules\\.cache') { Remove-Item -Path 'node_modules\\.cache' -Recurse -Force }\"",
+    "clean:all": "powershell -Command \"if (Test-Path '.next') { Remove-Item -Path '.next' -Recurse -Force }; if (Test-Path 'node_modules') { Remove-Item -Path 'node_modules' -Recurse -Force }; if (Test-Path 'package-lock.json') { Remove-Item 'package-lock.json' -Force }\" && npm install",
+    "env:validate": "node scripts/validate-env.js",
+    "env:generate-secret": "node scripts/generate-auth-secret.js",
+    "env:setup": "powershell -Command \"Copy-Item -Path '.env.chifa-vercel' -Destination '.env.local'\" && echo Fichier .env.local cree! Adaptez les valeurs puis executez: npm run env:validate"
   },
   "dependencies": {
+    "@ai-sdk/provider": "^2.0.0-beta.1",
+    "@ai-sdk/react": "^2.0.0-beta.6",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@types/express": "^5.0.3",
+    "@types/uuid": "^10.0.0",
+    "ai": "^5.0.0-beta.6",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.519.0",
+    "nanoid": "^5.1.5",
     "next": "^14.2.30",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^2.1.9",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
-    "zustand": "^5.0.5"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
