--- a/package.json
+++ b/package.json
@@ -15,19 +15,24 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "@types/express": "^5.0.3",
+    "@types/next-auth": "^3.13.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "lucide-react": "^0.519.0",
     "next": "^14.2.30",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
