--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "clean:all": "rm -rf .next node_modules package-lock.json && npm install"
   },
   "dependencies": {
+    "@ai-sdk/react": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
